outs/baselines/coeff_exps-6585556.err
  File "/leonardo_scratch/fast/IscrC_FoundCL/cl/lora-CL/ratatouille/ood/experiments/test.py", line 177
    temp_model.base_model.head.load_state_dict(classifier_weights,strict=False))
                                                                               ^
SyntaxError: unmatched ')'
